<resources>
    <string name="app_name">Cartel 2022</string>
    <string name="school">Ecoles participantes</string>
    <string name="planning">Planning</string>
    <string name="social_network">Réseaux Sociaux</string>
    <string name="ranking">Classement</string>
    <string name="urgency_contact">Contact des responsables</string>
    <string name="map">Plan</string>
    <string name="partner">Partenaire</string>
    <string name="aboutUs">A propos de nous</string>
    <string name="sports">Sports</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="web_site">Site Internet</string>
    <string name="url_facebook">https://www.facebook.com/profile.php?id=100058158610701</string>
    <string name="url_instagram">https://www.instagram.com/cartel_sainte_2022</string>
    <string name="url_web_site">https://www.cartel2022.com/</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>