<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />



    <ImageView
        android:id="@+id/homeLogoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="MissingConstraints,Suspicious0dp" />

    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="switchSchool"
        android:text="@string/school"
        app:layout_constraintBottom_toTopOf="@+id/buttonInstagram"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/homeLogoView" />

    <Button
        android:id="@+id/buttonInstagram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="switchPlanning"
        android:text="@string/planning"
        app:layout_constraintBottom_toTopOf="@+id/buttonWebSite"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook" />

    <Button
        android:id="@+id/buttonWebSite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="switchRanking"
        android:text="@string/ranking"
        app:layout_constraintBottom_toTopOf="@+id/buttonSport"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonInstagram" />

    <Button
        android:id="@+id/buttonSport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="switchSport"
        android:text="@string/sports"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonWebSite" />


</androidx.constraintlayout.widget.ConstraintLayout>
